First go at azure management arc

--- a/extensions/arc/package.json
+++ b/extensions/arc/package.json
@@ -28,6 +28,10 @@
       {
         "command": "arc.managePostgres",
         "title": "%arc.managePostgres%"
+      },
+      {
+        "command": "arc.azureArcResourceManage",
+        "title": "%arc.azureArcResourceManage%"
       }
     ]
   },
