--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,16 @@
 		{
 			"type": "node",
 			"request": "launch",
+			"name": "Coverage Area Report",
+			"program": "${workspaceFolder}/test/coverageAreaReport.js",
+			"stopOnEntry": true,
+			"args": [
+				"hygiene"
+			]
+		},
+		{
+			"type": "node",
+			"request": "launch",
 			"name": "Gulp Build",
 			"program": "${workspaceFolder}/node_modules/gulp/bin/gulp.js",
 			"stopOnEntry": true,
