--- a/extensions/notebook/package.json
+++ b/extensions/notebook/package.json
@@ -593,6 +593,7 @@
     "@types/request": "^2.48.1",
     "@types/rimraf": "^2.0.2",
     "@types/stack-trace": "0.0.29",
+    "@types/sinon": "^9.0.4",
     "@types/temp-write": "^3.3.0",
     "@types/tmp": "^0.2.0",
     "@types/uuid": "^3.4.5",
@@ -612,6 +613,7 @@
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "should": "^13.2.3",
+    "sinon": "^9.0.2",
     "typemoq": "^2.1.0",
     "vscodetestcover": "^1.0.9",
     "webpack": "^4.33.0"
