--- a/package.json
+++ b/package.json
@@ -203,7 +203,6 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-stream": "^5.2.1",
-    "windows-process-tree": "0.2.4",
     "yaserver": "^0.2.0"
   },
   "repository": {
@@ -217,6 +216,7 @@
     "vscode-windows-ca-certs": "0.2.0",
     "vscode-windows-registry": "1.0.2",
     "windows-foreground-love": "0.2.0",
-    "windows-mutex": "0.3.0"
+    "windows-mutex": "0.3.0",
+    "windows-process-tree": "0.2.4"
   }
 }
