--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@angular/platform-browser": "~4.1.3",
     "@angular/platform-browser-dynamic": "~4.1.3",
     "@angular/router": "~4.1.3",
+    "@lumino/widgets": "^1.13.4",
     "angular2-grid": "2.0.6",
     "ansi_up": "^3.0.0",
     "applicationinsights": "1.0.8",
