--- a/package.json
+++ b/package.json
@@ -58,14 +58,18 @@
     "@angular/platform-browser": "~4.1.3",
     "@angular/platform-browser-dynamic": "~4.1.3",
     "@angular/router": "~4.1.3",
-    "@jupyter-widgets/base": "^3.0.0",
-    "@jupyter-widgets/html-manager": "^0.19.0",
+    "@jupyter-widgets/base": "file:/Users/t-karora/Desktop/ipywidgets/node_modules/@jupyter-widgets/base",
+    "@jupyter-widgets/controls": "file:/Users/t-karora/Desktop/ipywidgets/node_modules/@jupyter-widgets/controls",
+    "@jupyter-widgets/html-manager": "file:/Users/t-karora/Desktop/ipywidgets/node_modules/@jupyter-widgets/html-manager",
+    "@jupyter-widgets/output": "file:/Users/t-karora/Desktop/ipywidgets/node_modules/@jupyter-widgets/output",
     "@lumino/widgets": "^1.13.4",
     "angular2-grid": "2.0.6",
     "ansi_up": "^3.0.0",
     "applicationinsights": "1.0.8",
     "chart.js": "^2.6.0",
     "chokidar": "3.2.3",
+    "es6-module-transpiler": "^0.10.0",
+    "es6-module-transpiler-amd-formatter": "^0.3.0",
     "graceful-fs": "4.2.3",
     "html-query-plan": "git://github.com/anthonydresser/html-query-plan.git#2.6",
     "http-proxy-agent": "^2.1.0",
@@ -82,6 +86,7 @@
     "node-pty": "0.10.0-beta8",
     "plotly.js-dist-min": "^1.53.0",
     "reflect-metadata": "^0.1.8",
+    "resolution": "^1.0.5",
     "rxjs": "5.4.0",
     "sanitize-html": "^1.19.1",
     "semver-umd": "^5.5.7",
