--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "@angular/platform-browser": "~4.1.3",
     "@angular/platform-browser-dynamic": "~4.1.3",
     "@angular/router": "~4.1.3",
+    "@jupyter-widgets/base": "/Users/chlafren/ipywidgets/packages/base",
+    "@lumino/widgets": "^1.13.4",
     "angular2-grid": "2.0.6",
     "ansi_up": "^3.0.0",
     "applicationinsights": "1.0.8",
@@ -205,6 +207,10 @@
     "webpack-cli": "^3.3.12",
     "webpack-stream": "^5.2.1",
     "yaserver": "^0.2.0"
+  },
+  "resolutions": {
+    "@jupyter-widgets/controls": "1.4.2",
+    "@jupyterlab/services": "3.2.1"
   },
   "repository": {
     "type": "git",
